[gd_scene load_steps=5 format=2]

[ext_resource path="res://assests/circle.png" type="Texture" id=1]
[ext_resource path="res://assests/icon/quest_inactive_icon.png" type="Texture" id=2]
[ext_resource path="res://src/object/Planet.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 140.032

[node name="Planet" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="quest" type="TextureRect" parent="."]
visible = false
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="gui_input" from="quest" to="." method="_on_quest_gui_input"]
